--- a/myresume/package.json
+++ b/myresume/package.json
@@ -4,7 +4,8 @@
   "description": "\"my resume\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
   "repository": {
     "type": "git",
